side bad updated

--- a/dashboard.html
+++ b/dashboard.html
@@ -26,45 +26,45 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <i><img height="20px" width="20px" src="images/icons8-home (2).svg" alt=""></i>
-                        <span>Dashboard</span>
+                        <i><img height="25px" width="25px" src="images/icons8-home (2).svg" alt=""></i>
+                        <span style="margin-left: 20px;">Dashboard</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <i><img height="20px" width="20px" src="images/icons8-inventory-50.png" alt="warehouse-1"/></i>
-                        <span>Inventory</span>
+                        <i><img height="25px" width="25px" src="images/icons8-inventory-50.png" alt="warehouse-1"/></i>
+                        <span style="margin-left: 20px;">Inventory</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <i><img height="20px" width="20px" src="images/icons8-graph-48.png" alt="warehouse-1"/></i>
-                        <span>Reports</span>
+                        <i><img height="25px" width="25px" src="images/icons8-graph-48.png" alt="warehouse-1"/></i>
+                        <span style="margin-left: 20px;">Reports</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <i><img height="20px" width="20px" src="images/icons8-order-50.png" alt="warehouse-1"/></i>
-                        <span>Orders</span>
+                        <i><img height="25px" width="25px" src="images/icons8-order-50.png" alt="warehouse-1"/></i>
+                        <span style="margin-left: 20px;">Orders</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <i><img height="20px" width="20px" src="images/icons8-plus.svg" alt="warehouse-1"/></i>
-                        <span>New Sale</span>
+                        <i><img height="25px" width="25px" src="images/icons8-plus.svg" alt="warehouse-1"/></i>
+                        <span style="margin-left: 20px;">New Sale</span>
                     </a>
                 </li>
             </ul>
             <div class="sidebar-footer">
                 <a href="#" class="sidebar-link">
-                    <i><img height="20px" width="20px" src="images/icons8-settings.svg" alt="warehouse-1"/></i>
-                    <span>Settings</span>
+                    <i><img height="25px" width="25px" src="images/icons8-settings.svg" alt="warehouse-1"/></i>
+                    <span style="margin-left: 20px;">Settings</span>
                 </a>
             </div>
             <div class="sidebar-footer">
-                <a href="#" class="sidebar-link">
-                    <i><img height="20px" width="20px" src="images/icons8-logout-50 (1).png" alt="warehouse-1"/></i>
-                    <span>Logout</span>
+                <a href="" class="sidebar-link">
+                    <i><img height="25px" width="25px" src="images/icons8-logout-50 (1).png" alt="warehouse-1"/></i>
+                    <span style="margin-left: 20px;">Logout</span>
                 </a>
             </div>
         </aside>
