--- a/dashboard.html
+++ b/dashboard.html
@@ -84,9 +84,19 @@
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="col d-flex justify-content-center align-items-center" style="height: 100%;">
-                    <a href="#">
-                        <i><img height="30px" width="30px" src="images/icons8-notification (3).svg" alt="warehouse-1"/></i>
-                    </a>
+                    <div class="dropdown dropleft">
+                        <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i><img height="25px" width="25px" src="images/icons8-notification (3).svg" alt=""></i>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
+                            <li class="dropdown-header">Notifications</li>
+                            <li><a class="dropdown-item" href="#">New message received</a></li>
+                            <li><a class="dropdown-item" href="#">Server alert</a></li>
+                            <li><a class="dropdown-item" href="#">Update available</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item text-center" href="#">View all</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col d-flex justify-content-center align-items-center" style="height: 100%;">
                     <a href="#">
