--- a/registration.html
+++ b/registration.html
@@ -129,7 +129,8 @@
                   </div>
                   <input type="email" class="form-control mb-3" placeholder="Email" required id="dark">
                   <input type="number" class="form-control mb-3" placeholder="Phone no." required minlength="8" id="dark">
-                  <input type="password" class="form-control mb-4" placeholder="Password" required id="dark">
+                  <input type="password" class="form-control mb-3" placeholder="Password" required id="dark">
+                  <input type="password" class="form-control mb-4" placeholder="Confirm Password" required id="dark">
         
                   <div class="form-check mb-3">
                     <input type="checkbox" id="dark" class="form-check-input mb-3" id="termsCheck" required>
