--- a/account_details.html
+++ b/account_details.html
@@ -71,7 +71,7 @@ button {
             </div>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="dashboard.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-home (2).svg" alt=""></i>
                         <span style="margin-left: 20px;">Dashboard</span>
                     </a>
@@ -144,6 +144,7 @@ button {
                         </ul>
                     </div>
                 </div>
+                <div class="col"><i><img height="30px" width="30px" src="images/icons8-account-50.png" alt=""></i></div>
                 <div class="col"></div>
             </div>
             <div class="row justify-content-center" style="height: 10vh;" id="bg">
@@ -200,6 +201,9 @@ button {
                                 </div>
                                 <div class="info-row">
                                     <strong>Store Type:</strong> <span id="storeType">Retail</span>
+                                </div>
+                                <div class="info-row">
+                                    <strong>Store ID:</strong> <span id="storeID">23165DDBSK483</span>
                                 </div>
                                 <div class="text-center edit-btn">
                                     <button class="btn btn-primary" onclick="enableEditing()">Edit</button>
