--- a/dashboard.html
+++ b/dashboard.html
@@ -98,6 +98,7 @@
                         </ul>
                     </div>
                 </div>
+                <div class="col"><a href="account_details.html"><i><img height="30px" width="30px" src="images/icons8-account-50.png" alt=""></i></a></div>
                 <div class="col"></div>
             </div>
             <div class="row" style="height: 100%;">
