--- a/Business_profile.html
+++ b/Business_profile.html
@@ -44,8 +44,8 @@ button {
 #img{
     background-image: url(images/undraw_forms_re_pkrt.svg);
     background-size: cover;
-    margin-left: 30px;
-    margin-top: 20px;
+    /* margin-left: 30px;
+    margin-top: 20px; */
 }
     </style>
     <div class="wrapper">
@@ -60,7 +60,7 @@ button {
             </div>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="dashboard.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-home (2).svg" alt=""></i>
                         <span style="margin-left: 20px;">Dashboard</span>
                     </a>
@@ -133,6 +133,7 @@ button {
                         </ul>
                     </div>
                 </div>
+                <div class="col"><i><img height="30px" width="30px" src="images/icons8-account-50.png" alt=""></i></div>
                 <div class="col"></div>
             </div>
             <div class="row justify-content-center" style="height: 8vh;" id="bg">
@@ -188,7 +189,7 @@ button {
                             </select>
                         </div>
                     </div>
-                    <div class="row" style="height:65vh;width:35vw;"">
+                    <div class="row" style="height:65vh;width: 45vw;">
                         <div class="col mt-3" id="img"></div>
                     </div>
                 </div>
