--- a/Business_profile.html
+++ b/Business_profile.html
@@ -47,6 +47,38 @@ button {
     /* margin-left: 30px;
     margin-top: 20px; */
 }
+.btn-gps {
+    display: flex;
+    justify-content: space-between;
+    }
+/* HTML: <div class="loader"></div> */
+.spinner {
+  display: none;
+  width: 30px;
+  height: 30px;
+  aspect-ratio: 1;
+  position: relative;
+  transform: rotate(45deg);
+}
+.spinner:before,
+.spinner:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50% 50% 0 50%;
+  background: #2a85cd;
+  -webkit-mask: radial-gradient(circle 10px at 50% 50%,#0000 94%,#000);
+}
+.spinner:after {
+  animation: l6 1s infinite;
+  transform: perspective(300px) translateZ(0px)
+}
+@keyframes l6 {
+  to {transform: perspective(300px) translateZ(150px);opacity:0}
+}
+
+
+@keyframes l1 {to{transform: rotate(.5turn)}}
     </style>
     <div class="wrapper">
         <aside id="sidebar">
@@ -167,13 +199,22 @@ button {
                 <input type="text" class="form-control" id="phone" placeholder="Enter GST Number">
                 <div id="phoneError" class="invalid-feedback">Please provide a valid GST number.</div>
             </div>
-
             <div class="mb-4">
-                <label for="address" class="form-label">Business Address</label>
-                <textarea class="form-control" id="address" rows="3" placeholder="Enter Business Address" required></textarea>
-                <div id="addressError" class="invalid-feedback">Address is required.</div>
+                <label for="address" class="form-label">Address</label>
+                <input type="text" class="form-control" id="address" placeholder="Enter Your Address">
             </div>
-
+            <div class="btn-gps mb-4">
+                <button type="button" class="btn" id="getLocation" style="background-color: #102741; color: white;">Get Current Location</button>
+                <div class="spinner" role="status"></div>
+            </div>
+            <div class="mb-3" hidden>
+                <label for="latitude" class="form-label">Latitude</label>
+                <input type="text" class="form-control" id="latitude" readonly>
+            </div>
+            <div class="mb-4" hidden>
+                <label for="longitude" class="form-label">Longitude</label>
+                <input type="text" class="form-control" id="longitude" readonly>
+            </div>
             <button type="submit" class="btn w-100" id="btn">Submit</button>
         </form>
                         </div>
@@ -205,6 +246,67 @@ button {
                 window.location.href = selectedValue; // Redirect to the selected URL
             }
         }
+        const getLocationBtn = document.getElementById('getLocation');
+        const spinner = document.querySelector('.spinner');
+        const latitudeField = document.getElementById('latitude');
+        const longitudeField = document.getElementById('longitude');
+        const addressField = document.getElementById('address');
+
+        getLocationBtn.addEventListener('click', () => {
+            spinner.style.display = 'inline-block'; // Show spinner
+
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    async (position) => {
+                        const latitude = position.coords.latitude;
+                        const longitude = position.coords.longitude;
+
+                        // Fill latitude and longitude fields
+                        latitudeField.value = latitude;
+                        longitudeField.value = longitude;
+
+                        // Fetch address using a geocoding API
+                        try {
+                            const response = await fetch(
+                                `https://api.opencagedata.com/geocode/v1/json?q=${latitude}+${longitude}&key=3ea71d75861545f8898330047f645b1d`
+                            );
+                            const data = await response.json();
+                            if (data && data.results.length > 0) {
+                                addressField.value = data.results[0].formatted;
+                            } else {
+                                addressField.value = 'Unable to fetch address.';
+                            }
+                        } catch (error) {
+                            addressField.value = 'Error fetching address.';
+                            console.error(error);
+                        } finally {
+                            spinner.style.display = 'none'; // Hide spinner
+                        }
+                    },
+                    (error) => {
+                        alert('Unable to retrieve location. Please allow location access in your browser settings.');
+                        spinner.style.display = 'none'; // Hide spinner
+                    }
+                );
+            } else {
+                alert('Geolocation is not supported by your browser.');
+                spinner.style.display = 'none'; // Hide spinner
+            }
+        });
+
+        const form = document.getElementById('locationForm');
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const data = {
+                name: document.getElementById('name').value,
+                email: document.getElementById('email').value,
+                latitude: latitudeField.value,
+                longitude: longitudeField.value,
+                address: addressField.value
+            };
+            console.log('Form Data:', data);
+            alert('Form submitted successfully! Check the console for details.');
+        });
         </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
