--- a/inventory.html
+++ b/inventory.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Inventory</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -13,6 +13,20 @@
 </head>
 
 <body>
+    <style>
+    .main-content {
+      padding: 20px;
+    }
+    .card-header {
+      font-weight: bold;
+    }
+    .badge {
+      font-size: 0.9em;
+    }
+    .table th, .table td {
+      vertical-align: middle;
+    }
+    </style>
     <div class="wrapper">
         <aside id="sidebar">
             <div class="d-flex">
@@ -25,13 +39,13 @@
             </div>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="dashboard.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-home (2).svg" alt=""></i>
                         <span style="margin-left: 20px;">Dashboard</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="inventory.html" class="sidebar-link">
+                    <a href="#" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-inventory-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Inventory</span>
                     </a>
@@ -101,38 +115,92 @@
                 <div class="col"><a href="account_details.html"><i><img height="30px" width="30px" src="images/icons8-account-50.png" alt=""></i></a></div>
                 <div class="col"></div>
             </div>
-            <div class="row" style="height: 100%;">
-                <div class="col-8" style="background-color: #c2ddf5;">
-                    <div class="row" style="height: 100%;">
-                        <div class="col"></div>
-                        <div class="col-11">
-                            <div class="row" style="height: 25%;">
-                                <div class="col-12 mb-3" id="border"><h5 style="margin-top: 10px;">Sales Overview</h5></div>
-                              </div>
-                              <div class="row" style="height:43%;">
-                                <div class="col-12 mb-3" id="border"><h5 style="margin-top: 10px;">Sales & Purchase</h5></div>
-                              </div>
-                              <div class="row" style="height: 22%;">
-                                <div class="col-12" id="border"><h5 style="margin-top: 10px;">Top Selling Stock</h5></div>
-                              </div>
+            <div class="main-content" style="height: 100%; background-color: #c2ddf5;">
+                <div class="container-fluid">
+                  <div class="row mb-4">
+                    <div class="col-lg-3">
+                      <div class="card">
+                        <div class="card-body text-center">
+                          <h5 class="card-header">Categories</h5>
+                          <p>14</p>
                         </div>
-                        <div class="col"></div>
+                      </div>
                     </div>
-                </div>
-                <div class="col-4" style="background-color: #c2ddf5;">
-                    <div class="row" style="height: 100%;">
-                        <div class="col-11">
-                            <div class="row" style="height: 40%;">
-                                <div class="col-12 mb-3" id="border"><h5 style="margin-top: 10px;">Inventory Summary</h5></div>
-                              </div>
-                              <div class="row" style="height:52% ;">
-                                <div class="col-12 mb-3" id="border"><h5 style="margin-top: 10px;">Low Quantity Stock</h5></div>
-                              </div>
+                    <div class="col-lg-3">
+                      <div class="card">
+                        <div class="card-body text-center">
+                          <h5 class="card-header">Total Products</h5>
+                          <p>868</p>
                         </div>
-                        <div class="col"></div>
+                      </div>
                     </div>
+                    <div class="col-lg-3">
+                      <div class="card">
+                        <div class="card-body text-center">
+                          <h5 class="card-header">Top Selling</h5>
+                          <p>5</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-3">
+                      <div class="card">
+                        <div class="card-body text-center">
+                          <h5 class="card-header">Low Stocks</h5>
+                          <p>12</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            
+                  <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                      <h5>Products</h5>
+                      <div>
+                        <button class="btn btn-primary btn-sm">Add Product</button>
+                        <button class="btn btn-outline-secondary btn-sm">Filters</button>
+                        <button class="btn btn-outline-secondary btn-sm">Download All</button>
+                      </div>
+                    </div>
+                    <div class="card-body">
+                      <table class="table table-bordered">
+                        <thead>
+                          <tr>
+                            <th>Product</th>
+                            <th>Buying Price</th>
+                            <th>Quantity</th>
+                            <th>Threshold</th>
+                            <th>Expiry Date</th>
+                            <th>Availability</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>Maggi</td>
+                            <td>₹430</td>
+                            <td>43 Packets</td>
+                            <td>12 Packets</td>
+                            <td>11/12/22</td>
+                            <td><span class="badge bg-success">In-stock</span></td>
+                          </tr>
+                          <tr>
+                            <td>Bru</td>
+                            <td>₹257</td>
+                            <td>22 Packets</td>
+                            <td>12 Packets</td>
+                            <td>21/12/22</td>
+                            <td><span class="badge bg-danger">Out of stock</span></td>
+                          </tr>
+                          <!-- Repeat rows as needed -->
+                        </tbody>
+                      </table>
+                      <div class="d-flex justify-content-between">
+                        <button class="btn btn-outline-secondary btn-sm">Previous</button>
+                        <button class="btn btn-outline-secondary btn-sm">Next</button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-            </div>
+              </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
