--- a/inventory.html
+++ b/inventory.html
@@ -27,7 +27,8 @@
       vertical-align: middle;
     }
     #btnnn{
-        background-color: #5394de;
+        color: white;
+        background-color: #174875;
     }
     #btnnn:hover{
         background-color: #3f79d1;
