store id updated

--- a/account_details.html
+++ b/account_details.html
@@ -252,7 +252,7 @@ button {
     const eyeIcon = document.getElementById('eyeIcon');
     
     if (storeID.textContent === '***************') {
-        storeID.textContent = '23165DDBSK483';
+        storeID.textContent = '23165fgxg-fcghchbv-hjvhDDhc-gghchgBSK483';
         eyeIcon.src ="images/icons8-closed-eye-32.png";
     } else {
         storeID.textContent = '***************';
