--- a/account_details.html
+++ b/account_details.html
@@ -177,7 +177,7 @@ button {
             <div class="row justify-content-center" style="height: 10vh;" id="bg">
                 <h2 class="text-center mt-5" style="color: #0e2238; font-weight: bold;">Account Details</h2>
             </div>
-            <div class="row" style="height: 100%;" id="bg">
+            <div class="row" style="height: 200vh;" id="bg">
                 <div class="col-6">
                     <div class="row justify-content-center align-items-center">
                         <div class="col-11" id="illus">
