--- a/landing.html
+++ b/landing.html
@@ -22,6 +22,9 @@
         #btn{
             border: 2px solid white;
             border-radius: 5px;
+            margin-left: 5px;
+            margin-right: 5px;
+            padding: 5px;
         }
         #btn:hover{
             background-color: white;
@@ -47,7 +50,7 @@
                 <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
                 <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                <li class="nav-item"><a class="nav-link ml-2 mr-2" id="btn" href="registration.html">Sign Up</a></li>
+                <li class="nav-item"><a class="nav-link" id="btn" href="registration.html">Sign Up</a></li>
                 <li class="nav-item"><a class="nav-link" id="btn" href="login.html">Login</a></li>
             </ul>
         </div>
