--- a/account_details.html
+++ b/account_details.html
@@ -10,82 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="account.css">
 </head>
 
 <body>
-    <style>
-        h2 {
-    margin-bottom: 30px;
-    color: #343a40;
-}
-
-.container {
-    max-width: 600px;
-    padding: 20px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-textarea {
-    resize: none;
-}
-
-button {
-    font-size: 16px;
-}
-#bg{
-    background-color:#c2ddf5 ;
-}
-#btn{
-    background-color: #174875;
-    color: white;
-}
-.section-title {
-    font-size: 25px;
-            font-weight: bold;
-            color: #555;
-            /* border-bottom: 2px solid #ddd; */
-            margin-bottom: 20px;
-            padding-bottom: 10px;
-        }
-        .info-row {
-            margin-bottom: 15px;
-        }
-        .edit-btn {
-            margin-top: 100px;
-        }
-        #illus{
-            margin-top: 100px;
-        }
-        .info-row {
-    margin-bottom: 10px;
-}
-
-.btn-light {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    outline: none; /* Remove focus outline */
-    box-shadow: none; /* Remove shadow on click (browser default styles) */
-}
-
-.btn-light:hover, 
-.btn-light:focus, 
-.btn-light:active {
-    border: none;
-    background-color: transparent;
-    outline: none; /* Ensure no outline on focus */
-    box-shadow: none; /* Prevent box shadow on active state */
-    cursor: pointer;
-}
-
-.btn-light i {
-    font-size: 16px;
-    color: #007bff;
-}
-
-    </style>
     <div class="wrapper">
         <aside id="sidebar">
             <div class="d-flex">
@@ -104,25 +32,25 @@ button {
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="inventory.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-inventory-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Inventory</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="reports.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-graph-48.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Reports</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="Orders.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-order-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Orders</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="new_sale.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-plus.svg" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">New Sale</span>
                     </a>
@@ -141,9 +69,9 @@ button {
                 </a>
             </div>
         </aside>
-        <div class="main">
-            <div class="row justify-content-center align-items-center" style="height: 8vh; background-color: #c2ddf5;">
-                <div class="col-10">
+        <div class="main" id="bg">
+            <div class="row align-items-center" id="Navbar">
+                <div class="col-11">
                     <div class="row justify-content-center align-items-center">
                         <div class="col"></div>
                         <div class="col-5" style="height: auto;">
@@ -153,112 +81,109 @@ button {
                         <div class="col-5"></div>
                     </div>
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col d-flex justify-content-center align-items-center" style="height: 100%;">
-                    <div class="dropdown dropleft">
-                        <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i><img height="30px" width="30px" src="images/icons8-notification (3).svg" alt=""></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
-                            <li class="dropdown-header">Notifications</li>
-                            <li><a class="dropdown-item" href="#">New message received</a></li>
-                            <li><a class="dropdown-item" href="#">Server alert</a></li>
-                            <li><a class="dropdown-item" href="#">Update available</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item text-center" href="#">View all</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col"><i><img height="30px" width="30px" src="images/icons8-account-50.png" alt=""></i></div>
-                <div class="col"></div>
-            </div>
-            <div class="row justify-content-center" style="height: 10vh;" id="bg">
-                <h2 class="text-center mt-5" style="color: #0e2238; font-weight: bold;">Account Details</h2>
-            </div>
-            <div class="row" style="height: 200vh;" id="bg">
-                <div class="col-6">
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-11" id="illus">
-                            <img src="images/undraw_profile_re_4a55 (1).svg" alt="" style="height: 100%; width: 100%;">
+                <div class="col d-flex justify-content-center align-items-center" style="height: auto;">
+                    <div class="row">
+                        <div class="col">
+                            <div class="dropdown dropleft">
+                                <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i><img height="30px" width="28px" src="images/icons8-notification (3).svg" alt=""></i>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
+                                    <li class="dropdown-header">Notifications</li>
+                                    <li><a class="dropdown-item" href="#">New message received</a></li>
+                                    <li><a class="dropdown-item" href="#">Server alert</a></li>
+                                    <li><a class="dropdown-item" href="#">Update available</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item text-center" href="#">View all</a></li>
+                                </ul>
+                            </div>
                         </div>
+                        <div class="col"><a href="account_details.html"><img height="30px" width="28px" src="images/icons8-account-50.png" alt=""></a></div>
                     </div>
                 </div>
-                <div class="col mt-5">
-                    <div class="row justify-content-center">
-                        <div class="col-11 mt-3">
-                            <div>
-                                <div class="section-title mb-3">Personal Info</div>
-                                <div class="info-row">
-                                    <strong>Name:</strong> <span id="name">John Doe</span>
-                                </div>
-                                <div class="info-row">
-                                    <strong>Age:</strong> <span id="age">30</span>
-                                </div>
-                                <div class="info-row">
-                                    <strong>Gender:</strong> <span id="gender">Male</span>
-                                </div>
-                                <div class="info-row">
-                                    <strong>Contact Number:</strong> <span id="contact">123-456-7890</span>
-                                </div>
-                                <div class="info-row">
-                                    <strong>Email:</strong> <span id="email">johndoe@example.com</span>
-                                </div>
+            </div>
+            <div class="row" style="height: auto;">
+                <h5 class="text">My account</h5>
+            </div>
+            <div class="row" id="profileHeading">
+                <div class="text-center"><h2>Personal information</h2></div>
+            </div>
+            <div class="row" id="profileContainer">
+                <div class="col"></div>
+                <div class="col">
+                    <div class="profileCard">
+                        <div class="row" style="padding: 20px;">
+                            <div class="col" style="gap: 20px;">
+                                <label for="name">Name</label>
+                                <div class="name" id="data-field">Biswajit Chatterjee</div>
+                                <label for="name">Age</label>
+                                <div class="name" id="data-field">21</div>
+                                <label for="name">Gender</label>
+                                <div class="name" id="data-field">Male</div>
+                                <label for="name">Contact number</label>
+                                <div class="name" id="data-field">7001641316</div>
+                            </div>
+                            <div class="col">
+                                <label for="name">Email</label>
+                                <div class="name" id="data-field">biswajitchatterjee347@gmail.com</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col mt-5">
-                    <div class="row justify-content-center">
-                        <div class="col-11 mt-3">
-                            <div>
-                                <div class="section-title mb-3">Business Details</div>
-                                <div class="info-row">
-                                    <strong>Store Name:</strong> <span id="storeName">Doe's Mart</span>
-                                </div>
-                                <div class="info-row">
-                                    <strong>Owner's Name:</strong> <span id="ownerName">John Doe</span>
-                                </div>
-                                <div class="info-row">
-                                    <strong>Store Address:</strong> <span id="storeAddress">123 Market St, City</span>
-                                </div>
-                                <div class="info-row">
-                                    <strong>GST Number:</strong> <span id="gstNumber">1234ABCDE5678F</span>
-                                </div>
-                                <div class="info-row">
-                                    <strong>Store Type:</strong> <span id="storeType">Retail</span>
-                                </div>
-                                <div class="info-row d-flex align-items-center">
-                                    <strong>Store ID:</strong> 
-                                    <span id="storeID" style="margin-left: 5px;">***************</span>
-                                    <button class="btn btn-light btn-sm ml-2" id="toggleEye" onclick="toggleStoreID()">
-                                        <img id="eyeIcon" src="images/icons8-closed-eye-32.png" alt="Eye Icon" style="width: 20px; height: 20px;">
-                                    </button>
-                                </div>
-                                <div class="text-center edit-btn">
-                                    <button class="btn btn-primary" onclick="enableEditing()">Edit</button>
-                                </div>
+                <div class="col"></div>
+            </div>
+            <div class="row" id="profileHeading">
+                <div class="text-center"><h2>Business details</h2></div>
+            </div>
+            <div class="row" id="profileContainer">
+                <div class="col"></div>
+                <div class="col">
+                    <div class="profileCard">
+                        <div class="row" style="padding: 20px;">
+                            <div class="col" style="gap: 20px;">
+                                <label for="name">Store name</label>
+                                <div id="data-field">Bastralaya</div>
+                                <label for="name">Owner's name</label>
+                                <div id="data-field">Debjyoti Ghosh</div>
+                                <label for="name">Store address</label>
+                                <div id="data-field">I dont Know</div>
+                                <label for="name">GST number</label>
+                                <div id="data-field">7023740164121316</div>
+                            </div>
+                            <div class="col">
+                                <label for="name">Store type</label>
+                                <div id="data-field">Retail</div>
+                                <label for="name">Store ID</label>
+                                <button id="copy-btn" style="border-radius: 50px;width: auto;margin-left: 20px;background-color: var(--100); color: black;">Copy</button>
+                                <div class="storeId" id="data-field">85ce30ea-82b9-477f-bd06-6f95cd4c3f82</div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="col"></div>
             </div>
         </div>
     </div>
     <script>
-        function toggleStoreID() {
-    const storeID = document.getElementById('storeID');
-    const eyeIcon = document.getElementById('eyeIcon');
-    
-    if (storeID.textContent === '***************') {
-        storeID.textContent = '23165fgxg-fcghchbv-hjvhDDhc-gghchgBSK483';
-        eyeIcon.src ="images/icons8-closed-eye-32.png";
-    } else {
-        storeID.textContent = '***************';
-        eyeIcon.src = 'images/icons8-eye-64.png';
-    }
-}
+       document.getElementById("copy-btn").addEventListener("click", function () {
+    const button = this; // Reference the button
+    const storeId = document.querySelector(".storeId").textContent;
+
+    navigator.clipboard.writeText(storeId)
+        .then(() => {
+            button.textContent = "Copied!"; // Change button text
+            button.style.backgroundColor = "var(--600)"; // Change background to green
+            button.style.color = "white"; // Ensure text remains visible
+
+            setTimeout(() => {
+                button.textContent = "Copy"; // Revert text
+                button.style.backgroundColor = "var(--100)"; // Revert background to blue
+                button.style.color = "black"; // Reset text color
+            }, 2000);
+        })
+        .catch(err => alert("Failed to copy: " + err));
+});
+
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
