--- a/account_details.html
+++ b/account_details.html
@@ -162,6 +162,35 @@
                 </div>
                 <div class="col"></div>
             </div>
+            <div class="row" id="profileHeading">
+                <div class="text-center"><h2>Employee details</h2></div>
+            </div>
+            <div class="row" id="profileContainer">
+                <div class="col"></div>
+                <div class="col">
+                    <div class="profileCard">
+                        <div class="row" style="padding: 20px;">
+                            <div class="col" style="gap: 20px;">
+                                <label for="name">1.</label>
+                                <div id="data-field">Biswajit Chatterjee</div>
+                                <label for="name">2.</label>
+                                <div id="data-field">Debjyoti Ghosh</div>
+                                <label for="name">3.</label>
+                                <div id="data-field">Ice Maji</div>
+                                <label for="name">4.</label>
+                                <div id="data-field">Subhajit das</div>
+                            </div>
+                            <div class="col">
+                                <label for="name">5.</label>
+                                <div id="data-field">Biswa Ganguly</div>
+                                <label for="name">6.</label>
+                                <div id="data-field">Bireshwar kundu</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col"></div>
+            </div>
         </div>
     </div>
     <script>
