--- a/existing_business.html
+++ b/existing_business.html
@@ -66,25 +66,25 @@ button {
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="inventory.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-inventory-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Inventory</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="reports.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-graph-48.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Reports</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="Orders.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-order-50.png" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">Orders</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="new_sale.html" class="sidebar-link">
                         <i><img height="25px" width="25px" src="images/icons8-plus.svg" alt="warehouse-1"/></i>
                         <span style="margin-left: 20px;">New Sale</span>
                     </a>
@@ -103,9 +103,9 @@ button {
                 </a>
             </div>
         </aside>
-        <div class="main">
-            <div class="row justify-content-center align-items-center" style="height: 8vh; background-color: #c2ddf5;">
-                <div class="col-10">
+        <div class="main" id="bg">
+            <div class="row align-items-center" id="Navbar">
+                <div class="col-11">
                     <div class="row justify-content-center align-items-center">
                         <div class="col"></div>
                         <div class="col-5" style="height: auto;">
@@ -115,26 +115,26 @@ button {
                         <div class="col-5"></div>
                     </div>
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col d-flex justify-content-center align-items-center" style="height: 100%;">
-                    <div class="dropdown dropleft">
-                        <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i><img height="30px" width="30px" src="images/icons8-notification (3).svg" alt=""></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
-                            <li class="dropdown-header">Notifications</li>
-                            <li><a class="dropdown-item" href="#">New message received</a></li>
-                            <li><a class="dropdown-item" href="#">Server alert</a></li>
-                            <li><a class="dropdown-item" href="#">Update available</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item text-center" href="#">View all</a></li>
-                        </ul>
+                <div class="col d-flex justify-content-center align-items-center" style="height: auto;">
+                    <div class="row">
+                        <div class="col">
+                            <div class="dropdown dropleft">
+                                <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i><img height="30px" width="28px" src="images/icons8-notification (3).svg" alt=""></i>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
+                                    <li class="dropdown-header">Notifications</li>
+                                    <li><a class="dropdown-item" href="#">New message received</a></li>
+                                    <li><a class="dropdown-item" href="#">Server alert</a></li>
+                                    <li><a class="dropdown-item" href="#">Update available</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item text-center" href="#">View all</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col"><a href="#"><img height="30px" width="28px" src="images/icons8-account-50.png" alt=""></a></div>
                     </div>
                 </div>
-                <div class="col"><i><img height="30px" width="30px" src="images/icons8-account-50.png" alt=""></i></div>
-                <div class="col"></div>
             </div>
             <div class="row justify-content-center" style="height: 8vh;" id="bg">
                 <h2 class="text-center mt-2" style="color: #0e2238;font-weight: bold;">Join existing Business</h2>
