--- a/new_sale.html
+++ b/new_sale.html
@@ -203,7 +203,9 @@
                         </div>
                     </main>
                 </div>
-                <div class="col"></div>
+                <div class="col d-flex justify-content-center align-items-center">
+                    <img src="images/undraw_empty_cart_co35.svg" alt="" style="height: 50vh;">
+                </div>
             </div>
         </div>
     </div>
