--- a/Orders.html
+++ b/Orders.html
@@ -1,99 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orders</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .container { margin-top: 20px; }
-        .btn-group-toggle .btn { border-radius: 0; }
-        .table { background-color: #fff; }
-        .btn.active { background-color: #007bff; color: white; }
-    </style>
+    <title>Dashboard</title>
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="account.css">
 </head>
+
 <body>
-
-<div class="container">
-    <h3>Orders</h3>
-    <div class="d-flex justify-content-between">
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-            <label class="btn btn-outline-primary active" id="buyBtn">
-                <input type="radio" name="options" autocomplete="off" checked> Buy
-            </label>
-            <label class="btn btn-outline-primary" id="sellBtn">
-                <input type="radio" name="options" autocomplete="off"> Sell
-            </label>
+    <div class="wrapper">
+        <aside id="sidebar">
+            <div class="d-flex">
+                <button class="toggle-btn" type="button">
+                    <i class="lni lni-grid-alt"></i>
+                </button>
+                <div class="sidebar-logo">
+                    <a href="#">InvenHub</a>
+                </div>
+            </div>
+            <ul class="sidebar-nav">
+                <li class="sidebar-item">
+                    <a href="dashboard.html" class="sidebar-link">
+                        <i><img height="25px" width="25px" src="images/icons8-home (2).svg" alt=""></i>
+                        <span style="margin-left: 20px;">Dashboard</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="inventory.html" class="sidebar-link">
+                        <i><img height="25px" width="25px" src="images/icons8-inventory-50.png" alt="warehouse-1"/></i>
+                        <span style="margin-left: 20px;">Inventory</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="reports.html" class="sidebar-link">
+                        <i><img height="25px" width="25px" src="images/icons8-graph-48.png" alt="warehouse-1"/></i>
+                        <span style="margin-left: 20px;">Reports</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="Orders.html" class="sidebar-link">
+                        <i><img height="25px" width="25px" src="images/icons8-order-50.png" alt="warehouse-1"/></i>
+                        <span style="margin-left: 20px;">Orders</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="new_sale.html" class="sidebar-link">
+                        <i><img height="25px" width="25px" src="images/icons8-plus.svg" alt="warehouse-1"/></i>
+                        <span style="margin-left: 20px;">New Sale</span>
+                    </a>
+                </li>
+            </ul>
+            <div class="sidebar-footer">
+                <a href="settings.html" class="sidebar-link">
+                    <i><img height="25px" width="25px" src="images/icons8-settings.svg" alt="warehouse-1"/></i>
+                    <span style="margin-left: 20px;">Settings</span>
+                </a>
+            </div>
+            <div class="sidebar-footer">
+                <a href="" class="sidebar-link">
+                    <i><img height="25px" width="25px" src="images/icons8-logout-50 (1).png" alt="warehouse-1"/></i>
+                    <span style="margin-left: 20px;">Logout</span>
+                </a>
+            </div>
+        </aside>
+        <div class="main" id="bg">
+            <div class="row align-items-center" id="Navbar">
+                <div class="col-11">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col"></div>
+                        <div class="col-5" style="height: auto;">
+                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                        </div>
+                        <div class="col-1"><button class="btn" id="btnn" type="submit">Search</button></div>
+                        <div class="col-5"></div>
+                    </div>
+                </div>
+                <div class="col d-flex justify-content-center align-items-center" style="height: auto;">
+                    <div class="row">
+                        <div class="col">
+                            <div class="dropdown dropleft">
+                                <a class="notification-icon position-relative" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i><img height="30px" width="28px" src="images/icons8-notification (3).svg" alt=""></i>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
+                                    <li class="dropdown-header">Notifications</li>
+                                    <li><a class="dropdown-item" href="#">New message received</a></li>
+                                    <li><a class="dropdown-item" href="#">Server alert</a></li>
+                                    <li><a class="dropdown-item" href="#">Update available</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item text-center" href="#">View all</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col"><a href="account_details.html"><img height="30px" width="28px" src="images/icons8-account-50.png" alt=""></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="height: auto;">
+                <h5 class="text">My account</h5>
+            </div>
+            <div class="row" id="profileHeading">
+                <div class="text-center"><h2>Personal information</h2></div>
+            </div>
+            <div class="row" id="profileContainer">
+                <div class="col"></div>
+                <div class="col">
+                    <div class="profileCard">
+                        <div class="row" style="padding: 20px;">
+                            <div class="col" style="gap: 20px;">
+                                <label for="name">Name</label>
+                                <div class="name" id="data-field">Biswajit Chatterjee</div>
+                                <label for="name">Age</label>
+                                <div class="name" id="data-field">21</div>
+                                <label for="name">Gender</label>
+                                <div class="name" id="data-field">Male</div>
+                                <label for="name">Contact number</label>
+                                <div class="name" id="data-field">7001641316</div>
+                            </div>
+                            <div class="col">
+                                <label for="name">Email</label>
+                                <div class="name" id="data-field">biswajitchatterjee347@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col"></div>
+            </div>
+            <div class="row" id="profileHeading">
+                <div class="text-center"><h2>Business details</h2></div>
+            </div>
+            <div class="row" id="profileContainer">
+                <div class="col"></div>
+                <div class="col">
+                    <div class="profileCard">
+                        <div class="row" style="padding: 20px;">
+                            <div class="col" style="gap: 20px;">
+                                <label for="name">Store name</label>
+                                <div id="data-field">Bastralaya</div>
+                                <label for="name">Owner's name</label>
+                                <div id="data-field">Debjyoti Ghosh</div>
+                                <label for="name">Store address</label>
+                                <div id="data-field">I dont Know</div>
+                                <label for="name">GST number</label>
+                                <div id="data-field">7023740164121316</div>
+                            </div>
+                            <div class="col">
+                                <label for="name">Store type</label>
+                                <div id="data-field">Retail</div>
+                                <label for="name">Store ID</label>
+                                <button id="copy-btn" style="border-radius: 50px;width: auto;margin-left: 20px;background-color: var(--100); color: black;">Copy</button>
+                                <div class="storeId" id="data-field">85ce30ea-82b9-477f-bd06-6f95cd4c3f82</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col"></div>
+            </div>
         </div>
-        <button class="btn btn-secondary" onclick="exportToExcel()">Import to Excel</button>
     </div>
+    <script>
+       document.getElementById("copy-btn").addEventListener("click", function () {
+    const button = this; // Reference the button
+    const storeId = document.querySelector(".storeId").textContent;
 
-    <table class="table table-bordered mt-3">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Date</th>
-                <th>Product</th>
-                <th>Items</th>
-                <th>Price</th>
-                <th>Type</th>
-            </tr>
-        </thead>
-        <tbody id="ordersTable">
-            <!-- Data will be injected here -->
-        </tbody>
-    </table>
-</div>
+    navigator.clipboard.writeText(storeId)
+        .then(() => {
+            button.textContent = "Copied!"; // Change button text
+            button.style.backgroundColor = "var(--600)"; // Change background to green
+            button.style.color = "white"; // Ensure text remains visible
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    const apiUrls = {
-        buy: '/api/buyOrders',
-        sell: '/api/sellOrders'
-    };
+            setTimeout(() => {
+                button.textContent = "Copy"; // Revert text
+                button.style.backgroundColor = "var(--100)"; // Revert background to blue
+                button.style.color = "black"; // Reset text color
+            }, 2000);
+        })
+        .catch(err => alert("Failed to copy: " + err));
+});
 
-    function fetchOrders(type) {
-        fetch(apiUrls[type])
-            .then(response => response.json())
-            .then(data => {
-                const tbody = document.getElementById('ordersTable');
-                tbody.innerHTML = '';
-                data.forEach(order => {
-                    const row = `<tr>
-                        <td>${order.id}</td>
-                        <td>${order.date}</td>
-                        <td>${order.product}</td>
-                        <td>${order.items}</td>
-                        <td>₹${order.price.toFixed(2)}</td>
-                        <td>${type.charAt(0).toUpperCase() + type.slice(1)}</td>
-                    </tr>`;
-                    tbody.insertAdjacentHTML('beforeend', row);
-                });
-            })
-            .catch(error => console.error('Error fetching data:', error));
-    }
-
-    function exportToExcel() {
-        // Placeholder function for exporting to Excel
-        alert('Export to Excel feature not implemented.');
-    }
-
-    document.getElementById('buyBtn').addEventListener('click', () => {
-        fetchOrders('buy');
-        document.getElementById('buyBtn').classList.add('active');
-        document.getElementById('sellBtn').classList.remove('active');
-    });
-
-    document.getElementById('sellBtn').addEventListener('click', () => {
-        fetchOrders('sell');
-        document.getElementById('sellBtn').classList.add('active');
-        document.getElementById('buyBtn').classList.remove('active');
-    });
-
-    // Initial load with buy orders
-    fetchOrders('buy');
-</script>
-
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="dasboard.js"></script>
 </body>
 </html>
