--- a/admin.html
+++ b/admin.html
@@ -7,30 +7,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+        @font-face {
+            font-family: 'Bungi_spice';
+            src: url(fonts/BungeeSpice-Regular.ttf);
+        }
         body {
-            background-color: #f8f9fa;
-            color: #333;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: white;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        body.dark-mode {
+            background-color: #222;
+            color: #f8f9fa;
         }
         .navbar-brand {
             font-weight: bold;
-            color: #007bff !important;
         }
         .card {
             border: none;
-            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-            margin-bottom: 2rem;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+            margin: 5rem;
+            transition: background-color 0.3s;
+        }
+        .dark-mode .card {
+            background-color: #333;
         }
         .card-header {
-            background-color: #007bff;
-            color: white;
             font-weight: bold;
+            transition: background-color 0.3s, color 0.3s;
+            font-family: 'Bungi_spice';
+        }
+        .dark-mode .card-header {
+            background-color: #444;
+            color: #f8f9fa;
         }
         .table {
             margin-bottom: 0;
+            transition: color 0.3s;
+        }
+        .dark-mode .table {
+            color: #f8f9fa;
         }
         .table th {
-            background-color: #e9ecef;
+            transition: background-color 0.3s;
+        }
+        .dark-mode .table th {
+            background-color: #444;
         }
         .btn-delete {
             color: #dc3545;
@@ -40,6 +61,14 @@
         }
         .badge {
             font-size: 0.8rem;
+        }
+        .dark-mode .alert-info {
+            background-color: #1a3a4a;
+            color: #9fcdff;
+            border-color: #0f2a3d;
+        }
+        .dark-mode .text-muted {
+            color: #adb5bd !important;
         }
     </style>
 </head>
@@ -53,7 +82,12 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+                        <a class="nav-link" href='dashboard.html'>Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <button id="darkModeToggle" class="btn btn-outline-secondary">
+                            <i class="fas fa-moon"></i> Dark Mode
+                        </button>
                     </li>
                 </ul>
             </div>
@@ -61,7 +95,7 @@
     </nav>
 
     <div class="container">
-        <h1 class="text-center mb-4">User and Store List</h1>
+        <h1 class="text-center mb-4" style="font-family: 'Bungi_spice';">User and Store List</h1>
 
         <div class="alert alert-info">
             <i class="fas fa-database me-2"></i>Total Database Size: {{ db_size or "N/A" }}
@@ -204,5 +238,36 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const darkModeToggle = document.getElementById('darkModeToggle');
+            const body = document.body;
+            const navbar = document.querySelector('.navbar');
+            const footer = document.querySelector('footer');
+
+            function toggleDarkMode() {
+                body.classList.toggle('dark-mode');
+                navbar.classList.toggle('navbar-dark');
+                navbar.classList.toggle('bg-dark');
+                footer.classList.toggle('bg-dark');
+                footer.classList.toggle('text-light');
+
+                const isDarkMode = body.classList.contains('dark-mode');
+                localStorage.setItem('darkMode', isDarkMode);
+
+                darkModeToggle.innerHTML = isDarkMode 
+                    ? '<i class="fas fa-sun"></i> Light Mode'
+                    : '<i class="fas fa-moon"></i> Dark Mode';
+            }
+
+            darkModeToggle.addEventListener('click', toggleDarkMode);
+
+            // Check for saved dark mode preference
+            const savedDarkMode = localStorage.getItem('darkMode');
+            if (savedDarkMode === 'true') {
+                toggleDarkMode();
+            }
+        });
+    </script>
 </body>
 </html>
