hover problem solved

--- a/admin.html
+++ b/admin.html
@@ -119,7 +119,7 @@
             <div class="card-body">
                 {% if users %}
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table">
                             <thead>
                                 <tr>
                                     <th>First Name</th>
