admin page updated

--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
             src: url(fonts/BungeeSpice-Regular.ttf);
         }
         body {
-            background-color: black;
+            background-color: white;
             transition: background-color 0.3s, color 0.3s;
         }
         body.dark-mode {
