--- a/dashboard.html
+++ b/dashboard.html
@@ -197,9 +197,9 @@
                         <div class="row" style="height: 14%;">
                             <div class="col" id="heding-cont"><h4>Low Quantity Stocks</h4></div>
                         </div>
-                        <div class="row">
+                        <div class="row" style="height: 86%;">
                             <div class="col"></div>
-                            <div class="col-10">
+                            <div class="col-10" style="overflow-y:scroll; height: 96%;">
                                 <table class="table" style="height: auto;font-size: 18px;">
                                     <thead>
                                         <tr>
@@ -209,6 +209,46 @@
                                         </tr>
                                     </thead>
                                     <tbody id="ordersTable">
+                                        <tr>
+                                            <td style="width: 10%;">1</td>
+                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 10%;">3</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 10%;">1</td>
+                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 10%;">3</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 10%;">1</td>
+                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 10%;">3</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 10%;">1</td>
+                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 10%;">3</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 10%;">1</td>
+                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 10%;">3</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 10%;">1</td>
+                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 10%;">3</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 10%;">1</td>
+                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 10%;">3</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 10%;">1</td>
+                                            <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
+                                            <td style="width: 10%;">3</td>
+                                        </tr>
                                         <tr>
                                             <td style="width: 10%;">1</td>
                                             <td style="width: 80%; display: flex; justify-content: space-evenly;">Lays</td>    
